# my-skills

./: .gitignore  portfolio123.skill
auto-researcher/: SKILL.md  pyproject.toml
auto-researcher/references/: program-template.md
auto-researcher/scripts/: validate_program.py
auto-researcher/tests/: test_integration_mini.py  test_validate_program.py
brand identity/: SKILL.md
chrome-cdp/: apply_all_changes.js  cancel_dialog.js  change_universe.js  clear_and_select.js  click_add.js  click_add_btn.js  click_agent_lgbm_ranking.js  click_ranking_sys.js  click_save_dialog.js  click_slow2.js  click_universe_search.js  find_run_btn.js  fix_rank_display.js  get_universe_options.js  package-lock.json  package.json  search_universe.js  select_slow2_only.js  select_slow2_v2.js  set_buy_rules.js  set_period.js  set_positions.js  set_ranking_system.js  set_sell_rules.js  set_strategy_name.js  update_rank_display.js  update_ranking.js  update_sell_rule.js
credit-data/: SKILL.md  credit_data.py  project-constitution.md  project-spec.md
credit-data-workspace/: build_benchmark.py
deep-research/: .env.example  SKILL.md
design-an-interface/: SKILL.md
doc-updater/: SKILL.md  project-constitution.md  project-spec.md
grading-rubric/: SKILL.md  plan.md  project-constitution.md  project-spec.md  pyproject.toml
grading-rubric/assets/: PROGRAM.fragment.md.template  scorer.py.template
grading-rubric/evals/: evals.json
grading-rubric/references/: code-quality.md  generic-task.md  ml-eval.md  trading-strategy.md  writing.md
grading-rubric/scripts/: validate_rubric.py
(+334 files in other folders)
